# PyCGoGN

./: CMakeLists.txt  README.md
examples/: sandbox.py
pybind11/: CMakeLists.txt
pycgogn/: CMakeLists.txt  dll.h
pycgogn/bindings/: binding.h  binding_attribute.cpp  binding_attribute.h  binding_cell.cpp  binding_cell.h  binding_cell_marker.cpp  binding_cell_marker.h  binding_cmaps.cpp  binding_cmaps.h  binding_dart.cpp  binding_dart.h  binding_dart_marker.cpp  binding_dart_marker.h  binding_io.cpp  binding_io.h  binding_map_base.cpp  binding_map_base.h  binding_map_base_data.cpp  binding_map_base_data.h  pycgogn_module.cpp
